apps/hello-world/envs/dev/replicas.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-world-app
spec:
  replicas: 3
  revisionHistoryLimit: 2
