apps/hello-world/envs/dev/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-world-app
spec:
  revisionHistoryLimit: 2
