apps/hello-world/envs/dev/version.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-world-app
spec:
  template:
    spec:
      containers:
      - image: quay.io/openshiftdemos/rollouts-demo:blue
        name: hello-world-app
