apps/hello-world/envs/dev/patch-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-active
spec:
  to:
    name: dev-hello-world-active

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-preview
spec:
  to:
    name: dev-hello-world-preview
